--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "jest": true
+        "jest": true,
+        "worker": true,
+        "serviceworker": true
     },
     "extends": [
         "airbnb-base"
